[package]
name = "cors-proxy"
version = "0.1.0"
authors = ["Thanatat Tamtan <thanatat.t@moonrhythm.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
http = "0.2.0"
hyper-tls = "0.4.1"
