[package]
name = "cors-proxy"
version = "0.1.0"
authors = ["Thanatat Tamtan <thanatat.t@moonrhythm.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"
hyper-tls = "0.5"
